# view-md

./: .gitignore  Cargo.toml  LICENSE-MIT  NATIVE_MD_VIEW.md  OPTIMIZE_PLAN.md  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  first-draft.md  index.html  install.sh  mdv.desktop  package.json  pnpm-lock.yaml  second-draft.md  tsconfig.json  vite.config.ts  vmd.desktop
.github/workflows/: ci.yml
ai/: KEYBOARD_INTERACTIVITY_PLAN.md  NATIVE_MD_VIEW.md  OPTIMIZE_PLAN.md  PERF_NEXT_STEPS.md
examples/: big.json  code-early.md  test.json  test.json5  test.md
src/: app.rs  doc.rs  highlight.rs  images.rs  inline.rs  json.rs  layout.rs  lib.rs  licenses.rs  main.rs  main.ts  paint.rs  state.rs  style.css  text.rs  theme.rs  trace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  render.rs
