[package]
name = "vmd"
version = "0.2.0"
description = "Fast, native markdown viewer."
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
authors = ["Martin Stark <901824+martinstark@users.noreply.github.com>"]
repository = "https://github.com/martinstark/view-md"
homepage = "https://github.com/martinstark/view-md"
readme = "README.md"
keywords = ["markdown", "viewer", "cli", "native"]
categories = ["command-line-utilities", "text-processing", "rendering"]
exclude = [
  "ai/",
  "assets/demo.gif",
  "assets/demo2.gif",
  "examples/",
  "tests/",
  ".claude/",
]

[[bin]]
name = "vmd"
path = "src/main.rs"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.12"
cosmic-text = "0.19"
fontdb = "0.23"
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5.3", default-features = false, features = ["default-onig"] }
arboard = "3"
opener = "0.8"
raw-window-handle = "0.6"
mimalloc = { version = "0.1", default-features = false }
notify = "8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[target.'cfg(target_os = "linux")'.dependencies]
smithay-clipboard = "0.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
