[package]
name = "md-view"
version = "0.1.0"
description = "Minimal markdown viewer"
edition = "2021"
rust-version = "1.77"

[lib]
name = "md_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "md-view"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "html"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
